background size cover

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
 
       <div
-        class="panel"
+        class="panel thin-photo"
         style="background-image: url('Compressed/RowHummer.JPG')"
         ;
       >
